--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "clsx": "^1.2.1",
         "fast-glob": "^3.2.11",
         "feed": "^4.2.2",
+        "framer-motion": "^10.18.0",
         "html-react-parser": "^5.0.11",
         "next": "^14.0.4",
         "next-themes": "^0.2.1",
