--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "remark-gfm": "^3.0.1",
         "tailwindcss": "^3.3.3",
         "typescript": "^5.1.6",
+        "vercel": "^33.2.0",
         "yup": "^1.3.3"
     },
     "devDependencies": {
